# starlark-java

./: .bazelrc  .envrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  NOTICE  README.md  build.gradle.kts  justfile  lefthook.yml  settings.gradle.kts
.copybara/: copy.bara.sky
.github/issues/: 001-upstream-dependency-sync.md
.github/workflows/: ci.yml  release.yml  sync.yml
gradle/: libs.versions.toml
